--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ocK89fwX&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=ni3gpMwh'>Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance</a></h5> 
+<h5><a href='https://opera.breezy.hr/p/ca999e27c909-graphic-designer-intern'>Graphic designer - intern at Opera</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+      UI/UX Designer Internship - Helloprint
+    </a></h5> 
+<p><span class="badge badge-light">Rotterdam</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://helloprint.recruitee.com/l/en/o/product-manager-internship-rotterdam'>
+      Product Manager Internship - Helloprint
+    </a></h5> 
+<p><span class="badge badge-light">Rotterdam</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ocK89fwX&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=ni3gpMwh'>Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698539335-generalist-programmer-intern'>Ubisoft Generalist Programmer Intern | SmartRecruiters</a></h5> 
@@ -119,7 +135,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://thestudenthotel.recruitee.com/o/revenue-intern-barcelona'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thestudenthotel.recruitee.com/o/revenue-intern-barcelona'>
       Revenue Intern - The Student Hotel
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
@@ -139,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -171,7 +187,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/chathamfinancial/jobs/1939833'>Job Application for Software Development Internship (2020) at Chatham Financial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chathamfinancial/jobs/1939833'>Job Application for Software Development Internship (2020) at Chatham Financial</a></h5> 
 <p><span class="badge badge-light">Kennett Square, PA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -195,7 +211,7 @@
 <p><span class="badge badge-light">Cork, Ireland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/exabeam/89f0df00-3ea2-4359-904e-86b515911bb4'>Exabeam - Junior Community Manager Intern (2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/exabeam/89f0df00-3ea2-4359-904e-86b515911bb4'>Exabeam - Junior Community Manager Intern (2020)</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -241,7 +257,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
+<h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
 <p><span class="badge badge-light">Palo Alto  Palo Alto, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -281,7 +297,7 @@
 <p><span class="badge badge-light">St. Paul, Minnesota United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/trns2egh04d-510330'>Administrator/Recruiter Intern (unpaid)  | Treva Corporation</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/trns2egh04d-510330'>Administrator/Recruiter Intern (unpaid)  | Treva Corporation</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -305,7 +321,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.duckdonuts.com/jobs/content-marketing-intern/?location_id=1588'>Content Marketing Intern | Duck Donuts</a></h5> 
+<h5><a href='https://www.duckdonuts.com/jobs/content-marketing-intern/?location_id=1588'>Content Marketing Intern | Duck Donuts</a></h5> 
 <p><span class="badge badge-light">Jordan Jordan</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -329,11 +345,11 @@
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oI6sbfwb'>Samsung Semiconductor, Inc. Careers - Memory Architecture Research Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oI6sbfwb'>Samsung Semiconductor, Inc. Careers - Memory Architecture Research Intern</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -349,7 +365,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698514987-2020-co-op-internship-oes-sales-6-12-months-'>Bosch Group 2020 Co-Op Internship ? OES Sales (6 - 12 Months) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698514987-2020-co-op-internship-oes-sales-6-12-months-'>Bosch Group 2020 Co-Op Internship ? OES Sales (6 - 12 Months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -397,7 +413,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ppgreatplains/ad6969c2-16e0-4222-931c-d9e331aba83f'>Planned Parenthood Great Plains - Human Resources Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/ppgreatplains/ad6969c2-16e0-4222-931c-d9e331aba83f'>Planned Parenthood Great Plains - Human Resources Intern</a></h5> 
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -445,20 +461,6 @@
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://helloprint.recruitee.com/l/nl/o/product-manager-internship-rotterdam'>
-      Product Manager Internship - Helloprint
-    </a></h5> 
-<p><span class="badge badge-light">Rotterdam</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.careerwebsite.com/job/intern-digital-technology-summer-2020-chicago-il-houston-tx/51450163/17712/'>Intern - Digital Technology (Summer 2020 - Chicago, IL &amp; Houston, TX) Job Opening in Chicago, Illinois - Racing Toward Diversity Magazine</a></h5> 
-<p><span class="badge badge-light">Chicago, IL Houston, TXChicago, Illinois</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elizabethwarren/jobs/4499731002'>Job Application for Iowa Organizing Internship at Warren For President</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
